--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack": "4.19.1",
     "webpack-cli": "3.1.1",
     "webpack-dev-server": "3.1.8"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --mode development"
   }
 }
